Nuevo script de SDOSL10n

--- a/Sample/SDOSL10n/Example/LocalizableStrings/es.lproj/TEST_LocalizableGenerate.strings
+++ b/Sample/SDOSL10n/Example/LocalizableStrings/es.lproj/TEST_LocalizableGenerate.strings
@@ -3,6 +3,7 @@
 //
 //  Created by SDOS
 //
+//  Generate 1036 keys
 
 "facebook_app_id" = "130537374236044";
 "appsflyer_dev_key" = "EFgBMU4p5xU5cwTdw68wzm";
